tests/pos/misc/43-top-level.ts

/*@ readonly */
let a = 1;


module A {


    /*@ foo :: () => { number | v > 0 } */
    function foo():number {
      return a ;
    }
}
