tests/neg/misc/43-top-level.ts
let a = 1; 


/*@ foo :: () => { number | v < 0 } */
function foo() {

  return a ;


}
